yolo-vehicle-detection-web-public-keras-default-v1/server/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: express-app
  template:
    metadata:
      labels:
        app: express-app
    spec:
      containers:
        - name: express-app
          image: alivefordie/express-server:v2.9
          imagePullPolicy: Always
          resources:
            requests:
              memory: "500Mi"
              cpu: "300m"
            limits:
              memory: "1.5Gi"
              cpu: "1.5"
          ports:
            - containerPort: 3001
