yolo-vehicle-detection-web-public-keras-default-v1/server/k8s/all_lowBudget.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: express-app
  template:
    metadata:
      labels:
        app: express-app
    spec:
      containers:
        - name: express-app
          image: alivefordie/express-server:v1.3
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: express-prisma-service
spec:
  selector:
    app: express-app
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
