yolo-vehicle-detection-web-public-keras-default-v1/server/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-prisma-service
spec:
  selector:
    app: express-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  sessionAffinity: ClientIP
