yolo-vehicle-detection-web-public-keras-default-v1/server/k8s/all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: express-app
  template:
    metadata:
      labels:
        app: express-app
    spec:
      containers:
        - name: express-app
          image: alivefordie/express-server:v2.8
          imagePullPolicy: Always
          resources:
            requests:
              memory: "500Mi"
              cpu: "300m"
            limits:
              memory: "1.5Gi"
              cpu: "1.5"
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: express-prisma-service
  # annotations:
  #   cloud.google.com/backend-config: '{"default": "express-backend-config"}'
spec:
  selector:
    app: express-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
  sessionAffinity: ClientIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: express-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: gb-express-server
    networking.gke.io/managed-certificates: express-cert
spec:
  rules:
  - host: alivefordie.life
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: express-prisma-service
            port:
              number: 80
